--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 	<div class="container">
-		<h2>To Do List App</h2>
+		<h2>Necessities to Take Over the World</h2>
 		<p><em> Double click to mark an item off, click on "X" to delete an item, and drag items to reorder.</em></p>
        
 		<form name="toDoList">
